# Machine-Configuration-Validator

./: .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yml  pyproject.toml  run_local.bat  run_local.sh  run_migrations.bat  run_migrations.sh  run_motor_simulator.py  run_poetry.bat  run_poetry.sh
app/: __init__.py  db.py  main.py  models.py  motor_simulator.py  mqtt_client.py  mqtt_subscriber.py  requirements.txt  validator_healthcheck.py  web_app.py
app/static/: index.html  main.js  style.css
app/utils/: config_loader.py  logger.py
app/validators/: cpu_validator.py  disk_validator.py  memory_validator.py  network_validator.py  services_validator.py
configs/: expected_config.yaml
